--- a/overlay/packages/apps/Settings/res/values/config.xml
+++ b/overlay/packages/apps/Settings/res/values/config.xml
@@ -4,6 +4,7 @@
      you may not use this file except in compliance with the License.
      You may obtain a copy of the License at
      http://www.apache.org/licenses/LICENSE-2.0
+
      Unless required by applicable law or agreed to in writing, software
      distributed under the License is distributed on an "AS IS" BASIS,
      WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -14,4 +15,9 @@
 
   <!-- Smart Charging -->
   <bool name="config_supportSmartCharging">true</bool>
-<resources>
+
+  <!-- Battery Health -->
+  <string name="config_batDesCap">/sys/class/power_supply/bms/charge_full</string>
+  <string name="config_batCurCap">/sys/class/power_supply/bms/charge_now_raw</string>
+  <string name="config_batChargeCycle">/sys/class/power_supply/bms/cycle_count</string>
+</resources>
